# HalfEdge

./: .ycm_extra_conf.py  CMakeLists.txt  CutMesh.h  README.md  data_container.h
apps/: CMakeLists.txt  cut_mesh.cpp  cut_mesh.h  cut_mesh_new.cpp
dislike/: HalfEdgeMeshBase.h  chunk_array.h  data_container.h  entity.h  halfedge.h  halfedge_mesh.h  tuple_type_index.h
include/: Cell.h  Edge.h  HalfEdge.h  HalfEdgeMeshBase.h  VTKMeshWriter.h  Vertex.h  chunk_array.h  cut_mesh.h  cut_mesh_algorithm.h  cut_mesh_algorithm0.h  data_container.h  data_set.h  edge.h  entity.h  figure.h  find_points.h  geometry.h  geometry_utils.h  halfedge.h  halfedge_mesh.h  halfedge_mesh_traits.h  interface.h  irregular_array2d.h  mark_array.h  mesh.h  node.h  plot_mesh.h  polygon_mesh.h  test_data_container.cpp  tools.h  uniform_mesh (copy).h  uniform_mesh.h  uniform_mesh_cut.h  view.h
include/GL/: view.h
include/imp/: halfedge_mesh.inl
include/old/: cut_mesh_algorithm_8_7.h  cut_mesh_algorithm_8_8.h  uniform_mesh_cut.h
old/: chunk_array.h  data_container.h  entity.h  geometry.h  halfedge.h  halfedge_mesh.h
test/: :w  CMakeLists.txt  chunk_array.h  chunk_array_bool.h  data_container.h  test.py  test_chunkarray.cpp  test_cut_mesh_alg.cpp  test_data_container.cpp  test_eigen.cpp  test_entity.cpp  test_gl.cpp  test_gl_tri.cpp  test_halfedgemesh.cpp  test_irregulararray2d.cpp  test_plot.cpp  test_pmr.cpp  test_range.cpp  test_shader.shader  test_simd.cpp  test_simd.py
test/container/: block_vector.hpp  data_set_container.cpp  data_set_container.hpp  vector.hpp
